--- a/pages/sheets/index.html
+++ b/pages/sheets/index.html
@@ -4,6 +4,7 @@ layout: page
 permalink: /sheets/
 ---
 
+<!--Redirect-->
 <script>
 window.location.replace("https://share.weiyun.com/KYUfuXKs");
 </script>
